# verus-android-wallet-sdk

./: CHANGELOG.md  Cargo.toml  build.gradle  build.gradle.kts  custom-tasks.gradle  gradle.properties  publish.gradle  rust-toolchain.toml  settings.gradle.kts
backend-lib/: Cargo.toml  build.gradle.kts
backend-lib/src/androidTest/java/cash/z/ecc/android/sdk/internal/jni/: RustDerivationToolTest.kt
backend-lib/src/main/java/cash/z/ecc/android/sdk/internal/: Backend.kt  Derivation.kt
backend-lib/src/main/java/cash/z/ecc/android/sdk/internal/jni/: RustBackend.kt  RustDerivationTool.kt
backend-lib/src/main/java/cash/z/ecc/android/sdk/internal/model/: JniChannelKeys.kt  JniSharedSecret.kt  JniShieldedSpendingKey.kt
backend-lib/src/main/java/cash/z/ecc/android/sdk/model/: ChannelKeys.kt  EncryptedPayload.kt
backend-lib/src/main/rust/: lib.rs  utils.rs
build-conventions/src/main/kotlin/: zcash-sdk.publishing-conventions.gradle.kts
buildSrc/src/main/java/cash/z/ecc/android/: Deps.kt
darkside-test-lib/src/androidTest/java/cash/z/ecc/android/sdk/darkside/test/: DarksideTestCoordinator.kt  TestWallet.kt
demo-app/src/androidTest/java/cash/z/wallet/sdk/sample/demoapp/: SampleCodeTest.kt
demo-app/src/main/java/cash/z/ecc/android/sdk/demoapp/: Navigation.kt  SharedViewModel.kt
demo-app/src/main/java/cash/z/ecc/android/sdk/demoapp/ext/: LightWalletEndpointExt.kt
demo-app/src/main/res/values/: strings.xml
demo-app/src/zcashmainnet/java/cash/z/ecc/android/sdk/demoapp/: DemoConstants.kt
demo-app/src/zcashmainnet/res/values/: strings.xml
lightwallet-client-lib/src/main/java/co/electriccoin/lightwallet/client/model/: LightWalletEndpointInfoUnsafe.kt  TreeStateUnsafe.kt
lightwallet-client-lib/src/main/proto/: service.proto
model-lib/: build.gradle.kts
model-lib/src/androidTest/java/cash/z/ecc/android/sdk/model/: ExampleInstrumentedTest.kt
model-lib/src/main/java/cash/z/ecc/android/sdk/model/: ChannelKeys.kt
model-lib/src/test/java/cash/z/ecc/android/sdk/model/: ExampleUnitTest.kt
sdk-incubator-lib/: build.gradle.kts
sdk-incubator-lib/src/androidTest/kotlin/cash/z/ecc/android/sdk/fixture/: PersistableWalletFixture.kt
sdk-incubator-lib/src/main/java/cash/z/ecc/android/sdk/: WalletCoordinator.kt
sdk-incubator-lib/src/main/java/cash/z/ecc/android/sdk/fixture/: WalletFixture.kt
sdk-incubator-lib/src/main/java/cash/z/ecc/android/sdk/model/: Base58.kt  PersistableWallet.kt  SeedPhrase.kt  ZecSend.kt
sdk-lib/: build.gradle.kts
sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/: AssetTest.kt
sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/fixture/: WalletFixture.kt
sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/integration/: TestnetIntegrationTest.kt
sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/internal/: SdkSynchronizerTest.kt
sdk-lib/src/androidTest/java/cash/z/ecc/android/sdk/util/: BalancePrinterUtil.kt  DataDbScannerUtil.kt  TestWallet.kt
sdk-lib/src/androidTest/java/cash/z/ecc/fixture/: FakeRustBackend.kt
sdk-lib/src/main/assets/co.electriccoin.zcash/checkpoint/mainnet/: 3121810.json
sdk-lib/src/main/assets/co.electriccoin.zcash/checkpoint/vrsc/: 3510000.json  3520000.json  3530000.json  3540000.json  3550000.json  3560000.json  3570000.json  3580000.json  3590000.json  3600000.json  3610000.json  3620000.json  3630000.json  3640000.json  3650000.json  3660000.json  3670000.json  3680000.json  3690000.json  3700000.json  3710000.json  3720000.json  3730000.json  3740000.json  3750000.json  3760000.json  3770000.json  3780000.json  3790000.json  3800000.json  3810000.json  3820000.json  3830000.json  3840000.json  3850000.json  3860000.json  3870000.json  3880000.json  3890000.json  3900000.json  (+15 more)
sdk-lib/src/main/assets/co.electriccoin.zcash/checkpoint/vrsctest/: 1.json  100001.json  10001.json  110001.json  120001.json  130001.json  140001.json  150001.json  160001.json  170001.json  180001.json  190001.json  200001.json  20001.json  210001.json  220001.json  230001.json  240001.json  250001.json  260001.json  270001.json  280001.json  290001.json  300001.json  30001.json  310001.json  320001.json  330001.json  340001.json  350001.json  360001.json  370001.json  380001.json  390001.json  400001.json  40001.json  410001.json  420001.json  430001.json  440001.json  (+61 more)
sdk-lib/src/main/java/cash/z/ecc/android/sdk/: SdkSynchronizer.kt  Synchronizer.kt
sdk-lib/src/main/java/cash/z/ecc/android/sdk/internal/: DerivationToolExt.kt  SaplingParamTool.kt  TypesafeBackend.kt  TypesafeBackendImpl.kt  TypesafeDerivationToolImpl.kt
sdk-lib/src/main/java/cash/z/ecc/android/sdk/model/: Account.kt  Bech32.kt  ChannelKeys.kt  DecryptParams.kt  EphemeralPublicKey.kt  SaplingViewingKey.kt  SharedSecret.kt  ShieldedSpendingKey.kt  TransactionSubmitResult.kt  ZcashNetwork.kt
sdk-lib/src/main/java/cash/z/ecc/android/sdk/tool/: DerivationTool.kt
src/main/java/cash/z/ecc/android/sdk/: Initializer.kt  SdkSynchronizer.kt  Synchronizer.kt
src/main/java/cash/z/ecc/android/sdk/block/: CompactBlockProcessor.kt
src/main/java/cash/z/ecc/android/sdk/ext/: ZcashSdkCommon.kt
src/main/java/cash/z/ecc/android/sdk/jni/: RustBackend.kt  RustBackendWelding.kt
src/main/java/cash/z/ecc/android/sdk/tool/: DerivationTool.kt
src/main/java/cash/z/ecc/android/sdk/transaction/: PersistentTransactionManager.kt  TransactionEncoder.kt  TransactionManager.kt  WalletTransactionEncoder.kt
src/main/rust/: lib.rs  local_rpc_types.rs
src/main/rust/utils/: exception.rs
src/vrscmainnet/java/cash/z/ecc/android/sdk/ext/: ZcashSdk.kt
(+19 files in other folders)
