[package]
name = "zcash-android-wallet-sdk"
version = "0.0.4"
authors = [
    "Jack Grigg <jack@z.cash>",
    "Kevin Gorham <kevin.gorham@z.cash>",
]
description = "JNI backend for the Android wallet SDK"
publish = false
edition = "2018"
rust-version = "1.77"

[dependencies]
hdwallet = "0.4"
hdwallet-bitcoin = "0.4"
hex = "0.4"
orchard = "0.8"
prost = "0.12"
rusqlite = "0.29"
sapling = { package = "sapling-crypto", version = "0.1", default-features = false }
schemer = "0.2"
secp256k1 = "0.26"
secrecy = "0.8"
zcash_address = "0.3"
#zcash_client_backend = { version = "0.12.1", features = ["transparent-inputs", "unstable"] }
#zcash_client_sqlite = { version = "0.10.3", features = ["transparent-inputs", "unstable", "linearscanning"] }
zcash_client_backend = { version = "0.12.1", features = ["unstable"] }
zcash_client_sqlite = { version = "0.10.3", features = ["unstable", "linearscanning"] }
zcash_primitives = "0.15"
zcash_proofs = "0.15"

# Initialization
rayon = "1.7"

# JNI
anyhow = "1"
jni = { version = "0.21", default-features = false }

# Logging
log-panics = "2.0.0"
paranoid-android = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"

# Conditional access to newer NDK features
dlopen2 = "0.7"
libc = "0.2"

# Uncomment this to use orchard-specific functions
[features]
orchard = []
transparent-inputs = []

## Uncomment this to test librustzcash changes locally
#[patch.crates-io]
#zcash_address = { path = '../../clones/librustzcash/components/zcash_address' }
#zcash_client_backend = { path = '../../clones/librustzcash/zcash_client_backend' }
#zcash_client_sqlite = { path = '../../clones/librustzcash/zcash_client_sqlite' }
#zcash_primitives = { path = '../../clones/librustzcash/zcash_primitives' }
#zcash_proofs = { path = '../../clones/librustzcash/zcash_proofs' }

## Uncomment this to test someone else's librustzcash changes in a branch
[patch.crates-io]
zcash_address = { git = "https://github.com/VerusCoin/librustzcash", branch = "dev" }
zcash_client_backend = { git = "https://github.com/VerusCoin/librustzcash", branch = "dev" }
zcash_client_sqlite = { git = "https://github.com/VerusCoin/librustzcash", branch = "dev" }
zcash_primitives = { git = "https://github.com/VerusCoin/librustzcash", branch = "dev" }
zcash_proofs = { git = "https://github.com/VerusCoin/librustzcash", branch = "dev" }

[lib]
name = "zcashwalletsdk"
path = "src/main/rust/lib.rs"
crate-type = ["staticlib", "cdylib"]
